Fix overflow processes

--- a/src/renderer/src/components/DatalistProcesses/datalistProcesses.css
+++ b/src/renderer/src/components/DatalistProcesses/datalistProcesses.css
@@ -5,6 +5,7 @@
   width: 100%;
   border-radius: 5px;
   background-color: #202020;
+  overflow: hidden;
 }
 
 .load-processes-bar {
